# robetarme-integration-shotcrete

./: .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypointd.sh  fix-perms.sh
config/: arm_robot_config.yaml  ros_interface_config.yaml  target_config.yaml  tasks_config.yaml  tracIk_config.yaml
scripts/: README.md  setupControlLasaEnv.sh
src/wp5-robotic-arms/: CMakeLists.txt  package.xml
src/wp5-robotic-arms/config/: arm_robot_config.yaml  tracIk_config.yaml
src/wp5-robotic-arms/include/: IRoboticArmBase.h  RoboticArmCobod.h  RoboticArmFactory.h  RoboticArmIiwa7.h  RoboticArmUr5.h
src/wp5-robotic-arms/libs/trac-ik/: tatus
src/wp5-robotic-arms/meshes/: ridgeback.stl  ridgebackMount.stl  surface_finishing_tool.stl
src/wp5-robotic-arms/meshes/cobod_arm/collision/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Scraper_Link.STL  base_link.STL
src/wp5-robotic-arms/meshes/cobod_arm/visual/: Link_2.STL  Scraper_Link.STL  Scraper_Link.dae
src/wp5-robotic-arms/scripts/: =2.12  self_avoidance.py
src/wp5-robotic-arms/src/: IRoboticArmBase.cpp  RoboticArmCobod.cpp  RoboticArmIiwa7.cpp  RoboticArmUr5.cpp
src/wp5-robotic-arms/urdf/: robetarme copy.urdf  robetarme.urdf  robetarme_sf.urdf  robetarme_shot.urdf  ur5.urdf  ur5_tool_sf.urdf
src/wp5-ros2-interface/: CMakeLists.txt  package.xml
src/wp5-ros2-interface/config/: ros_interface_config.yaml
src/wp5-ros2-interface/include/: RosInterfaceHumble.hpp
src/wp5-ros2-interface/src/: RosInterfaceHumble.cpp  test_ros2_interface.cpp
src/wp5-tasks/: CMakeLists.txt  package.xml
src/wp5-tasks/config/: tasks_config.yaml
src/wp5-tasks/include/: ITaskBase.h  TaskFSM.h  TaskFactory.h  TaskShotcreteKUL.h  utilityFunctions.h
src/wp5-tasks/launch/: main_task.py
src/wp5-tasks/src/: ITaskBase.cpp  TaskShotcreteKUL.cpp  main_task.cpp  task_example.cpp  utilityFunctions.cpp
