<?xml version="1.0"?>
<package format="3">
  <name>wp5_ros2_interface</name>
  <version>0.1.0</version>
  <description>ROS2 interface library for the robotic arm</description>

  <maintainer email="your_actual_email@example.com">Your Actual Name</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rosidl_typesupport_c</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>std_srvs</depend>
  <!-- <depend>robotiq_ft_sensor_interfaces</depend> -->

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
